changed the checkbox to switch the file paths to just file names and vice-versa into a toggle button. Improved accessibility.

--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,10 @@ p, h2 {
     text-align: center;
 }
 
+#toggle-file-view[aria-pressed="true"] {
+    border: 5px darkblue inset;
+}
+
 .dialog {
     display: none;
 }
