Fixed a bug where paths were not handled correctly on macOS and Linux platforms.

--- a/styles/main.css
+++ b/styles/main.css
@@ -20,7 +20,8 @@ p, h2 {
 }
 
 #toggle-file-view[aria-pressed="true"] {
-    border: 5px darkblue inset;
+    border: 3px darkblue inset;
+    background-color: darkblue;
 }
 
 .dialog {
